[gd_scene load_steps=13 format=3 uid="uid://cimeplqfltcgd"]

[ext_resource type="Script" path="res://scripts/user_interface/uiCampMenu.gd" id="1_nstr8"]
[ext_resource type="PackedScene" uid="uid://cw0gvoxm7mdqr" path="res://scenes/user_interface/FastTravel.tscn" id="2_cuufk"]
[ext_resource type="PackedScene" uid="uid://8xomgu0u202i" path="res://scenes/user_interface/RosterSelector.tscn" id="2_mvcbr"]
[ext_resource type="Texture2D" uid="uid://by81ic0dfnm67" path="res://images/sprites/icon_camp.png" id="3_rei4d"]
[ext_resource type="PackedScene" uid="uid://c36nhmt43udrv" path="res://scenes/user_interface/Crafting.tscn" id="3_tmwur"]
[ext_resource type="Theme" uid="uid://clgfgqvh2f440" path="res://design/BorderfulButton.tres" id="4_fshuc"]
[ext_resource type="PackedScene" uid="uid://bpkffg1rqjdpp" path="res://scenes/user_interface/CustomButton.tscn" id="4_hfpgg"]
[ext_resource type="Texture2D" uid="uid://bd8vp562frwnh" path="res://images/sprites/button_hammer_normal.png" id="4_qaxaj"]
[ext_resource type="Texture2D" uid="uid://dd2hvxqa8mrra" path="res://images/sprites/button_gang_normal.png" id="5_5vk30"]
[ext_resource type="Theme" uid="uid://wd4l2cmo4vgn" path="res://design/OutlinedLabelThin.tres" id="5_hxrhj"]
[ext_resource type="Texture2D" uid="uid://36ou1mhhbvwi" path="res://images/sprites/button_pinpoint_normal.png" id="6_jy7n5"]
[ext_resource type="PackedScene" uid="uid://c87gpcles4gjo" path="res://scenes/user_interface/CustomTextureButton.tscn" id="10_prij7"]

[node name="CampMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nstr8")

[node name="OtherActions" type="HBoxContainer" parent="."]
z_index = 10
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -172.0
offset_right = 52.0
offset_bottom = -148.0
grow_vertical = 2
pivot_offset = Vector2(15, 42)
alignment = 1

[node name="Camp" parent="OtherActions" instance=ExtResource("10_prij7")]
layout_mode = 2
texture = ExtResource("3_rei4d")
description_text = "test"
hold_delay = 0.5

[node name="Craft" parent="OtherActions" instance=ExtResource("10_prij7")]
layout_mode = 2
texture = ExtResource("4_qaxaj")
description_text = "test"
hold_delay = 0.5

[node name="GameMenu" parent="OtherActions" instance=ExtResource("10_prij7")]
layout_mode = 2
texture = ExtResource("5_5vk30")
hold_delay = 0.5

[node name="FastTravel" parent="OtherActions" instance=ExtResource("10_prij7")]
layout_mode = 2
texture = ExtResource("6_jy7n5")
description_text = "test"
hold_delay = 0.5

[node name="Submenus" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FastTravel" parent="Submenus" instance=ExtResource("2_cuufk")]
visible = false
layout_mode = 1
offset_top = 44.0
offset_bottom = 44.0

[node name="Crafting" parent="Submenus" instance=ExtResource("3_tmwur")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
offset_left = -320.0
offset_top = -156.0
offset_right = 320.0
offset_bottom = 204.0
grow_vertical = 2

[node name="Roster" parent="Submenus" instance=ExtResource("2_mvcbr")]
visible = false
layout_mode = 1
offset_left = -392.0
offset_top = -172.0
offset_right = 392.0
offset_bottom = 180.0

[node name="Camp" type="Control" parent="Submenus"]
z_index = 10
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RestOptions" type="HBoxContainer" parent="Submenus/Camp"]
layout_mode = 0
offset_left = -320.0
offset_top = 148.0
offset_right = 320.0
offset_bottom = 176.0
alignment = 1

[node name="Rest" parent="Submenus/Camp/RestOptions" instance=ExtResource("4_hfpgg")]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme = ExtResource("4_fshuc")
text = "REST"
alignment = 1

[node name="NoRest" parent="Submenus/Camp/RestOptions" instance=ExtResource("4_hfpgg")]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme = ExtResource("4_fshuc")
text = "CARRY ON"
hold_time = 0.25

[node name="MainBar" type="Control" parent="Submenus/Camp"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = 164.0
offset_right = -20.0
offset_bottom = 164.0
grow_horizontal = 2
grow_vertical = 0

[node name="ScrollContainer" type="ScrollContainer" parent="Submenus/Camp/MainBar"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -296.0
offset_top = -128.0
offset_right = 296.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(296, 32)
follow_focus = true
horizontal_scroll_mode = 3
vertical_scroll_mode = 0

[node name="CampItems" type="HBoxContainer" parent="Submenus/Camp/MainBar/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="CustomButton" parent="Submenus/Camp/MainBar/ScrollContainer/CampItems" instance=ExtResource("4_hfpgg")]
visible = false
layout_mode = 2

[node name="CustomButton2" parent="Submenus/Camp/MainBar/ScrollContainer/CampItems" instance=ExtResource("4_hfpgg")]
visible = false
layout_mode = 2

[node name="CustomButton3" parent="Submenus/Camp/MainBar/ScrollContainer/CampItems" instance=ExtResource("4_hfpgg")]
visible = false
layout_mode = 2

[node name="CustomButton4" parent="Submenus/Camp/MainBar/ScrollContainer/CampItems" instance=ExtResource("4_hfpgg")]
visible = false
layout_mode = 2

[node name="Panel" type="Panel" parent="Submenus/Camp/MainBar"]
visible = false
z_index = -1
layout_mode = 0
offset_left = -112.0
offset_top = -80.0
offset_right = 112.0
offset_bottom = 8.0
mouse_filter = 2

[node name="RestStuff" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RichTextLabel" type="RichTextLabel" parent="RestStuff"]
layout_mode = 0
offset_left = -280.0
offset_top = -156.0
offset_bottom = -134.0
scale = Vector2(2, 2)
theme = ExtResource("5_hxrhj")
bbcode_enabled = true
text = "[center][outline_size=2][outline_color=black]Who Will Stand Guard?"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="RestStuff"]
layout_mode = 0
offset_left = -88.0
offset_top = 140.0
offset_right = 88.0
offset_bottom = 172.0
alignment = 1

[node name="Return" parent="RestStuff/HBoxContainer" instance=ExtResource("4_hfpgg")]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_fshuc")
text = "RETURN"
alignment = 1
hold_time = 0.25

[node name="ConfirmRest" parent="RestStuff/HBoxContainer" instance=ExtResource("4_hfpgg")]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_fshuc")
text = "SKIP GUARD"
alignment = 1
hold_time = 0.25

[connection signal="pressed" from="OtherActions/Camp" to="." method="_on_camp_pressed"]
[connection signal="pressed" from="OtherActions/Craft" to="." method="_on_craft_pressed"]
[connection signal="pressed" from="OtherActions/GameMenu" to="." method="_on_game_menu_pressed"]
[connection signal="pressed" from="OtherActions/FastTravel" to="." method="_on_fast_travel_pressed"]
[connection signal="pressed" from="Submenus/Camp/RestOptions/Rest" to="." method="_on_rest_pressed"]
[connection signal="held_press" from="Submenus/Camp/RestOptions/NoRest" to="." method="_on_no_rest_pressed"]
[connection signal="pressed" from="RestStuff/HBoxContainer/Return" to="." method="_on_return_pressed"]
[connection signal="held_press" from="RestStuff/HBoxContainer/ConfirmRest" to="." method="_on_confirm_rest_pressed"]
